<resources>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="app_name">TheMovieDB</string>
    <string name="change_password">Change Password</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="favorites">Favorites</string>
    <string name="log_in">Log In</string>
    <string name="home">Home</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="profile">Profile</string>
    <string name="related_movies">Related Movies</string>
    <string name="save">Save</string>
    <string name="save_favourite">Save as Favourite</string>
    <string name="saved_movies">Saved Movies</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="show_password">Show password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
</resources>
