<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegister"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textAllCaps="true"
        android:textSize="50sp"
        android:layout_margin="10dp"
        android:text="@string/sign_up"/>

    <ImageView
        android:id="@+id/imageView_Register_ProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_launcher"/>

    <EditText
        android:id="@+id/editText_Register_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/username"
        android:importantForAutofill="no" />

    <EditText
    android:id="@+id/editText_Register_Password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:inputType="textPassword"
    android:hint="@string/password"
    android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/editText_Register_PasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_again"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox_Register_ShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:layout_margin="10dp"
            android:labelFor="@+id/checkBox_Register_ShowPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Register_AddProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_picture"/>

        <Button
            android:id="@+id/button_Register_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>

    </LinearLayout>

</LinearLayout>