<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textAllCaps="true"
        android:textSize="50sp"
        android:layout_margin="50dp"
        android:text="@string/log_in"/>

    <EditText
        android:id="@+id/editText_LogIn_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:hint="@string/username"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_LogIn_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox_LogIn_ShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:layout_margin="10dp"
            android:labelFor="@+id/checkBox_LogIn_ShowPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_LogIn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"/>
</LinearLayout>